@@ -2,5 +2,9 @@
 
 JAVA_FILES = *.java
 
+# Include the source code for the component classes
+
+RESOURCE_FILES =  BaseComponent.java BasePage.java
+
 include $(SYS_MAKEFILE_DIR)/Package.mk
 
