@@ -27,6 +27,10 @@
 <jwc id="showProperties"/>
 </jwc>
 
+<jwc id="ifShowSource">
+<jwc id="showJavaSource"/>
+</jwc>
+
 </jwc>
 </jwc>
 </jwc>
