@@ -2,6 +2,7 @@
 
 JAVA_FILES = *.java
 
-RESOURCE_FILES = *.jwc *.html *.css *.gif
+RESOURCE_FILES = *.jwc *.html *.css *.gif \
+	$(patsubst %.jwc,%.java,$(wildcard *.jwc))
 
 include $(SYS_MAKEFILE_DIR)/Package.mk
