@@ -1,0 +1,76 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- $Id$ -->
+<!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"  "http://tapestry.primix.com/dtd/Tapestry_1_0.dtd">
+<specification>
+	<class>com.primix.tapestry.inspector.ShowJavaSource</class>
+	<components>
+		<component>
+			<id>ifNoSource</id>
+			<type>Conditional</type>
+			<bindings>
+				<binding>
+					<name>condition</name>
+					<property-path>source</property-path>
+				</binding>
+				<static-binding>
+					<name>invert</name>
+					<value>true</value>
+				</static-binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertClassName</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>page.inspectedComponent.class.name</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>ifSource</id>
+			<type>Conditional</type>
+			<bindings>
+				<binding>
+					<name>condition</name>
+					<property-path>source</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>e</id>
+			<type>Foreach</type>
+			<bindings>
+				<binding>
+					<name>source</name>
+					<property-path>source</property-path>
+				</binding>
+				<binding>
+					<name>value</name>
+					<property-path>line</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertLineNumber</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>lineNumber</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertLine</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>line</property-path>
+				</binding>
+			</bindings>
+		</component>
+	</components>
+</specification>
