@@ -47,7 +47,8 @@ public class ViewTabs extends BaseComponent
 {
 	private static View[] views =
 	{
-		View.SPECIFICATION, View.COMPONENTS, View.TEMPLATE, View.PROPERTIES
+		View.SPECIFICATION, View.COMPONENTS, View.TEMPLATE, View.PROPERTIES,
+		View.JAVA_SOURCE
 	};
 		
 	private View view;
